# yarp

./: .gitignore  README.md  yarp.code-workspace
crates/yarp_rs/: .gitignore  Cargo.toml  README.md  example_manifest.json  platform_yarp.json
crates/yarp_rs/src/: digest.rs  ftypes.rs  gather.rs  graph.rs  macho.rs  main.rs  manifest.rs  node.rs  parse.rs  paths.rs  pkg.rs  search.rs
crates/yarp_rs/src/factory/: core.rs  deps.rs  main.rs  mod.rs  node.rs  pkg.rs  spec.rs
crates/yarp_rs/src/gather/: make.rs  mod.rs  node_factory.rs
crates/yarp_rs/src/node/: deps.rs  mod.rs
crates/yarp_rs/src/parse/: core.rs  elf.rs  macho.rs  mod.rs  search.rs
crates/yarp_rs/src/parse/search/: linux.rs
crates/yarp_rs/src/parse/search/linux/: auxval.rs  ldd.rs  rpath.rs
crates/yarp_rs/src/pkg/: bootstrap.rs  export.rs  mod.rs  patch.rs  paths.rs
crates/yarp_rs/src/pkg/patch/: elf.rs  macho.rs  mod.rs
crates/yarp_rs/src/search/: linux.rs
crates/yarp_rs/src/search/linux/: ldconfig.rs  rpath.rs
crates/yarp_rs/src/site_pkgs/: comps.rs  mod.rs
docs/: DIST.md  INSTALL_NAME.md  NESTING.md  SEARCH.md  revisit.md
old/: pylibcollect.json
python/yarp/: README.md  pyproject.toml
python/yarp/src/yarp/: __init__.py
python/yarp/src/yarp/discover/: __init__.py  callbacks.py  find_lib.py  imports.py  intercept.py  monkeypatch.py  python_props.py  types.py
python/yarp/src/yarp/discover/all_libs/: __init__.py
python/yarp/src/yarp/discover/search/: __init__.py
python/yarp/src/yarp/discover/search/linux/: __init__.py  ldd.py  rpath.py
python/yarp/tests/: test_discover.py
(+10 files in other folders)
