[package]
name = "yarp_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bimap = "0.6.3"
env_logger = "0.11.8"
lief = "0.16.5"
log = "0.4.27"
petgraph = {version = "0.8.1", features=["std"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
