[package]
name = "yarp_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bimap = "0.6.3"
env_logger = "0.11.8"
lief = "0.16.5"
log = "0.4.27"
pathdiff = "0.2.3"
petgraph = {version = "0.8.1", features=["std"]}
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
walkdir = "2.5.0"
