[project]
name = "yarp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hariom Narang", email = "hariom2711!@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []


[project.scripts]
yarp = "yarp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=8.3.5",
]
